# micrograd_cpp

./: CMakeLists.txt  README.md  engine.hpp  nn.hpp
microgradc++/: CMakeLists.txt  data.txt  engine.hpp  microgradc++.cpp  microgradc++.hpp  nn.hpp  plot.txt  sklearn.hpp  tests.hpp
